--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,9 +3,9 @@ clone_depth: 1
 
 init:
   - set APPVEYOR_SAVE_CACHE_ON_ERROR=1
-
+  - set PATH=C:\msys64\usr\bin;%PATH%
 install:
-  - ls C:\
+  - ls C:\msys64\
   - bash -lc "pacman --noconfirm --sync --refresh --refresh pacman"
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade"
 
