--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,14 +5,13 @@ init:
   - set APPVEYOR_SAVE_CACHE_ON_ERROR=1
   - set PATH=C:\msys64\usr\bin;%PATH%
 install:
-  - ls C:\msys64\
   - bash -lc "pacman --noconfirm --sync --refresh --refresh pacman"
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade"
 
 
 
 build_script:
-  - bash -c "./configure"
+  - bash -lc "pwd; ls; ./configure"
  
  # on_failure:
  
