--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ clone_depth: 1
 init:
   - set APPVEYOR_SAVE_CACHE_ON_ERROR=1
   - set PATH=C:\msys64\usr\bin;%PATH%
-  - pushd C:\projects\kalibrate-rtl
+  - 
 install:
   - bash -lc "pacman --noconfirm --sync --refresh --refresh pacman"
   - bash -lc "pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade"
@@ -12,7 +12,7 @@ install:
 
 
 build_script:
-  - bash -lc "pwd; ls; ./configure"
+  - bash -lc "pushd C:\projects\kalibrate-rtl; ./configure"
  
  # on_failure:
  
