--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
 
 build_script:
   - pushd c:\projects\kalibrate-rtl
-  - bash -lc "./configure"
+  - bash -lc "./bootstrap && ./configure"
  
  # on_failure:
  
