--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ init:
   - 
 install:
   - bash -lc "pacman --noconfirm --sync --refresh --refresh pacman"
-  - bash -lc "pacman -y mingw-w64-x86_64-fftw"
+  - bash -lc "pacman -S mingw-w64-x86_64-fftw"
   #- bash -lc "pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade"
 
 
@@ -18,4 +18,4 @@ build_script:
  # on_failure:
  
 cache:
-  - c:\msys2
+  - c:\msys64
